path fix widget

--- a/public/widget-test.html
+++ b/public/widget-test.html
@@ -69,7 +69,7 @@
       position: 'bottom-right',
       title: 'Ask Marlin',
       primaryColor: '#0070f3',
-      apiEndpoint: '/api/widget-chat'
+      apiEndpoint: 'https://marlan.photographytoprofits.com/api/widget-chat'
     };
   </script>
   <script src="/widget/chat-widget.js" async defer></script>
