auth bypass for widget

--- a/public/widget-test.html
+++ b/public/widget-test.html
@@ -72,6 +72,6 @@
       apiEndpoint: 'https://marlan.photographytoprofits.com/api/widget-chat'
     };
   </script>
-  <script src="/widget/chat-widget.js" async defer></script>
+  <script src="/widget.js" async defer></script>
 </body>
 </html> 
