--- a/lib/widget/gtm-simple.html
+++ b/lib/widget/gtm-simple.html
@@ -19,7 +19,7 @@
   
   // Create and append the script
   var script = document.createElement('script');
-  script.src = 'https://programs.thehighrollersclub.io/widget.js';
+  script.src = 'https://programs.thehighrollersclub.io/widget/chat-widget.js';
   script.async = true;
   script.defer = true;
   
