--- a/lib/widget/gtm-simple.html
+++ b/lib/widget/gtm-simple.html
@@ -14,12 +14,12 @@
     position: 'bottom-right',
     title: 'Ask Marlin',
     primaryColor: '#0070f3',
-    apiEndpoint: 'https://programs.thehighrollersclub.io/api/widget-chat'
+    apiEndpoint: 'https://marlan.photographytoprofits.com/api/widget-chat'
   };
   
   // Create and append the script
   var script = document.createElement('script');
-  script.src = 'https://programs.thehighrollersclub.io/widget/chat-widget.js';
+  script.src = 'https://marlan.photographytoprofits.com/widget/chat-widget.js';
   script.async = true;
   script.defer = true;
   
