--- a/lib/widget/gtm-snippet.html
+++ b/lib/widget/gtm-snippet.html
@@ -17,13 +17,13 @@
     title: 'Ask Marlin',
     primaryColor: '#0070f3',
     // Updated to the correct API endpoint
-    apiEndpoint: 'https://programs.thehighrollersclub.io/api/widget-chat'
+    apiEndpoint: 'https://marlan.photographytoprofits.com/api/widget-chat'
   };
   
   // Dynamically load the widget resources
   var script = document.createElement('script');
   // Updated to point directly to the built file location
-  script.src = 'https://programs.thehighrollersclub.io/widget/chat-widget.js';
+  script.src = 'https://marlan.photographytoprofits.com/widget/chat-widget.js';
   script.async = true;
   script.defer = true;
   script.onerror = function() {
