--- a/lib/widget/gtm-snippet.html
+++ b/lib/widget/gtm-snippet.html
@@ -1,7 +1,7 @@
 <!-- 
   Marlin Chat Widget - Google Tag Manager Snippet
   This HTML snippet should be added as a Custom HTML tag in Google Tag Manager
-  for programs.thehighrollersclub.io
+  for embedding on thehighrollersclub.io and other photography websites
 -->
 <script>
 // Use an IIFE (Immediately Invoked Function Expression) for proper scoping
